clopro/15.4/ingress.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: phpmyadmin-deployment
  labels:
    app: phpmyadmin
spec:
  replicas: 3
  selector:
    matchLabels:
      app: phpmyadmin
  template:
    metadata:
      labels:
        app: phpmyadmin
    spec:
      containers:
        - name: phpmyadmin
          image: phpmyadmin/phpmyadmin
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: phpmyadmin-service
spec:
  type: NodePort
  selector:
    app: phpmyadmin
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: beatl-alb-tls
  annotations:
#    ingress.alb.yc.io/subnets: e9brrlcqfin96dm3137g
    ingress.alb.yc.io/security-groups: enpbtostqi2edseu2q2v, enpr11se0mk2rajka2ft, enp85s8p8g4jhg0dsvkh, enpjbe3ebqhi64vgtsoe
    ingress.alb.yc.io/external-ipv4-address: 158.160.51.75
#    ingress.alb.yc.io/group-name: my-ingress-group
spec:
  tls:
    - hosts:
        - k8s.beatljs.ru
      secretName: "yc-certmgr-cert-id-fpqfsg3ekmjnmdtohb60"
  rules:
    - host: k8s.beatljs.ru
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: phpmyadmin-service
                port:
                  number: 80
