clopro/15.4/phpa-deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: phpmyadmin-deployment
  labels:
    app: phpmyadmin
spec:
  replicas: 3
  selector:
    matchLabels:
      app: phpmyadmin
  template:
    metadata:
      labels:
        app: phpmyadmin
    spec:
      containers:
        - name: phpmyadmin
          image: phpmyadmin/phpmyadmin
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: phpmyadmin-service
spec:
#  type: NodePort
  selector:
    app: phpmyadmin
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: phpmyadmin-http-ingress
#  namespace: kube-public
#  annotations:
    # Enable client certificate authentication
#    nginx.ingress.kubernetes.io/auth-tls-verify-client: "on"
    # Create the secret containing the trusted ca certificates
#    nginx.ingress.kubernetes.io/auth-tls-secret: "default/ingress-tls-secret"
    # Specify the verification depth in the client certificates chain
#    nginx.ingress.kubernetes.io/auth-tls-verify-depth: "1"
#    kubernetes.io/ingress.class: "nginx"
#    cert-manager.io/cluster-issuer: "yc-clusterissuer"
spec:
  ingressClassName: nginx
  rules:
    - host: k8s.beatljs.ru
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: phpmyadmin-service
                port:
                  number: 80
            path: /
  tls:
    - hosts:
      - k8s.beatljs.ru
      secretName: "yc-certmgr-cert-id-fpqfsg3ekmjnmdtohb60"
